--- a/index.html
+++ b/index.html
@@ -7,18 +7,30 @@
   </head>
   <body>
 
-    <h1>Discover hidden places in the world around you</h1>
-    <a href="#">Download Excursion (Coming soon!)</a>
+   <div class="Video">
+     <h1>Discover hidden places in the world around you</h1>
+      <p><a href="#">Download Excursion (Coming soon!)</a></p>
+      <video autoplay loop>
+        <source src="./resources/videos/excursion.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+   </div>
 
-    <h2>Your personal travel guide</h2>
-    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+   <div class="TravelGuide">
+     <h2>Your personal travel guide</h2>
+      <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+      <p><img src="./resources/images/camp.jpg" alt="camp in the sand"></p>
+      <p><img src="./resources/images/phone.png" alt="iPhone's icon"></p>
+   </div>
 
-    <img src="" alt="">
+   <div class="ComingSoon">
+     <h2>Coming Soon for iPhone and Android</h2>
+     <p><a href="#">Download Excursion (Coming soon!)</a></p>
+   </div>
 
-    <h2>Coming Soon for iPhone and Android</h2>
-    <a href="#">Download Excursion (Coming soon!)</a>
-
-    <footer></footer>
+    <footer class="footer">
+    <p>&copy; Excursion</p>
+  </footer>
 
   </body>
 </html>
