Complete the page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Discover hidden places in the world around you</title>
+    <title>Excursion</title>
     <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
   </head>
   <body>
