--- a/index.html
+++ b/index.html
@@ -7,26 +7,27 @@
   </head>
   <body>
 
-   <div class="Video">
-     <h1>Discover hidden places in the world around you</h1>
-      <p><a href="#">Download Excursion (Coming soon!)</a></p>
-      <video autoplay loop>
-        <source src="./resources/videos/excursion.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
-   </div>
+    <!-- Landing section -->
 
-   <div class="TravelGuide">
+     <h1>Discover hidden places in the world around you</h1>
+      <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
+      <video autoplay muted loop>
+        <source src="./resources/videos/excursion.mp4" type="video/mp4">
+        Your browser does not support the video.
+      </video>
+
+    <!-- Information section -->
+
      <h2>Your personal travel guide</h2>
       <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
       <p><img src="./resources/images/camp.jpg" alt="camp in the sand"></p>
-      <p><img src="./resources/images/phone.png" alt="iPhone's icon"></p>
-   </div>
 
-   <div class="ComingSoon">
+    <!-- Coming soon section -->
+
+     <p><img src="./resources/images/phone.png" alt="iPhone's icon"></p>
      <h2>Coming Soon for iPhone and Android</h2>
-     <p><a href="#">Download Excursion (Coming soon!)</a></p>
-   </div>
+     <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
+
 
     <footer class="footer">
     <p>&copy; Excursion</p>
